# nitrox

./: .gitignore  CLAUDE.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
boot/: limine.conf
docs/architecture/: boot-flow.md  content-addressed-store.md  drivers-and-irps.md  entropy.md  ext4-fs-server-rw.md  filesystem-data-path.md  handle-system.md  ipc.md  libheap.md  libos.md  logging.md  memory-management.md  namespace-and-resource-servers.md  notifications.md  overview.md  profiles-and-namespace-projection.md  scheduler.md  service-manager.md  session-and-auth.md  smp.md  syscaps.md
docs/conventions/: arch-boundary.md  qemu-integration-tests.md  userspace-build.md
docs/history/: decision-log.md  nitrox-shell-design-v1.1.md  nitrox-ui-composition-model-v1.md  os-design-v5.1.md
docs/planning/: implementation-plan.md  phase-0-foundation.md  phase-1-kernel-substrate.md  phase-2-filesystem-namespace.md  phase-3-service-ecosystem.md  phase-4-desktop.md  shell-coreutils-plan.md
docs/rationale/: deferred-decisions.md  rejected-approaches.md  why-async-syscalls.md  why-capabilities.md  why-content-addressed-store.md  why-no-signals.md  why-phased-acpi.md  why-rust.md  why-slub-not-buddy-only.md  why-supervisor-registration.md
docs/spec/: abi-version-hash.md  device-node.md  handle-encoding.md  init-toml-schema.md  io-operation.md  ipc-message-format.md  irp-layout.md  notification-format.md  process-spawn-args.md  rsproto-auth-ops.md  rsproto-block-ops.md  rsproto-file-ops.md  rsproto-namespace-ops.md  rsproto-wire-format.md  service-toml-schema.md  syscall-abi.md  thread-args.md  typed-stream-format.md  user-memory-access.md
kernel/: CLAUDE.md  Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/docs/: lock-ordering.md
kernel/src/: boot_selftest.rs  device.rs  dpc.rs  embedded_images.rs  entropy.rs  font.rs  framebuffer.rs  initramfs.rs  klog.rs  lib.rs  limine.rs  main.rs  rsproto.rs  sched.rs  tlb.rs
kernel/src/arch/: cpu.rs  entropy.rs  irq.rs  irq_router.rs  mod.rs  paging.rs  platform.rs  registers.rs  smp.rs  timer.rs  user_access.rs
kernel/src/arch/x86_64/: abi.rs  acpi.rs  apic.rs  context.rs  cpu.rs  entropy.rs  fpu.rs  gdt.rs  idt.rs  ioapic.rs  mod.rs  paging.rs  qemu.rs  registers.rs  regs.rs  resched.rs  serial.rs  smp.rs  syscall.rs  timer.rs  tlb.rs  user_access.rs
kernel/src/drivers/: ahci.rs  console.rs  gpt.rs  mod.rs
kernel/src/handle/: entry.rs  global.rs  grace.rs  mod.rs  prng.rs  segment.rs  table.rs  type_rights.rs
kernel/src/io/: block.rs  irp.rs  mod.rs  ramdisk.rs
kernel/src/libkern/: chacha.rs  clock.rs  handle.rs  io_op.rs  io_result.rs  ipc.rs  kbox.rs  kstring.rs  kvec.rs  memory.rs  mod.rs  notification.rs  spawn.rs  spinlock.rs  syscaps.rs  thread.rs  timer_flags.rs
kernel/src/mm/: addr_space.rs  buddy.rs  dma.rs  elf.rs  heap.rs  kstack.rs  kvmap.rs  mod.rs  slab.rs  test_support.rs  user_access.rs  vmm.rs
kernel/src/object/: device_node.rs  entropy_object.rs  file_object.rs  header.rs  interrupt_object.rs  ipc_channel.rs  kernel_server.rs  memory_object.rs  mod.rs  namespace.rs  notification_channel.rs  pending_op.rs  process.rs  thread.rs  timer.rs  userspace_server.rs
kernel/src/pci/: mod.rs
kernel/src/syscall/: error.rs  mod.rs  table.rs
tools/: Cargo.toml
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
userspace/: CLAUDE.md  Cargo.toml  rust-toolchain.toml  x86_64-unknown-nitrox.json
userspace/.cargo/: config.toml
userspace/auth-service/: CLAUDE.md  Cargo.toml
userspace/auth-service/src/: lib.rs  main.rs
userspace/child/: Cargo.toml  build.rs
userspace/child/.cargo/: config.toml
userspace/child/src/: main.rs
userspace/eshell/: CLAUDE.md  Cargo.toml
userspace/eshell/src/: main.rs
userspace/fs-server-ext4/: CLAUDE.md  Cargo.toml  build.rs  user.ld
userspace/fs-server-ext4/.cargo/: config.toml
userspace/fs-server-ext4/src/: ext4.rs  lib.rs  main.rs  serve.rs
userspace/heartbeat/: Cargo.toml
userspace/heartbeat/.cargo/: config.toml
userspace/heartbeat/src/: main.rs
userspace/hello/: Cargo.toml  user.ld
userspace/hello/src/: main.rs
userspace/init/: CLAUDE.md  Cargo.toml  build.rs  user.ld
userspace/init/.cargo/: config.toml
userspace/init/src/: heap.rs  lib.rs  main.rs  manifest.rs  toml_lite.rs
userspace/libcrypto/: CLAUDE.md  Cargo.toml
userspace/libcrypto/src/: hmac.rs  lib.rs  password.rs  pbkdf2.rs  sha256.rs
userspace/libheap/: CLAUDE.md  Cargo.toml
userspace/libheap/src/: lib.rs
userspace/libkern/: CLAUDE.md  Cargo.toml
userspace/libkern/src/: abi.rs  debug.rs  error.rs  handle.rs  lib.rs  mem.rs  syscall.rs  syscaps.rs
userspace/liblog/: Cargo.toml
userspace/liblog/src/: lib.rs
userspace/libos/: Cargo.toml
userspace/libos/src/: error.rs  exec.rs  handle.rs  lib.rs  objects.rs  sys.rs
userspace/librsproto/: Cargo.toml
userspace/librsproto/src/: auth.rs  error.rs  file.rs  lib.rs  log.rs  meta.rs  namespace.rs
userspace/libstream/: Cargo.toml
userspace/libstream/src/: lib.rs  record.rs  table.rs  wire.rs
userspace/logging-service/: Cargo.toml  build.rs  user.ld
userspace/logging-service/src/: lib.rs  main.rs  path.rs
userspace/parent/: Cargo.toml
userspace/parent/src/: main.rs
userspace/profile-server/: Cargo.toml  build.rs
userspace/profile-server/src/: lib.rs  main.rs  manifest.rs
userspace/service-mgr/: CLAUDE.md  Cargo.toml  build.rs
userspace/service-mgr/src/: lib.rs  main.rs  service_toml.rs
userspace/session-mgr/: CLAUDE.md  Cargo.toml
userspace/session-mgr/src/: main.rs
userspace/usersh/: CLAUDE.md  Cargo.toml
userspace/usersh/src/: main.rs
