[package]
name = "nitrox-kernel"
version = "0.1.0"
edition = "2024"
description = "Nitrox kernel — bare-metal x86_64 entry, Limine-loaded."

[lib]
name = "nitrox_kernel"
path = "src/lib.rs"

[[bin]]
name = "nitrox-kernel"
path = "src/main.rs"

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
debug = true
lto = false
codegen-units = 1
overflow-checks = false
