[package]
name = "nitrox-kernel"
version = "0.1.0"
edition = "2024"
description = "Nitrox kernel — bare-metal x86_64 entry, Limine-loaded."

[lib]
name = "nitrox_kernel"
path = "src/lib.rs"

[[bin]]
name = "nitrox-kernel"
path = "src/main.rs"

[features]
# Compile in the boot-time self-tests / demos (`src/boot_selftest.rs`) and run them
# during boot. Off by default: a normal boot goes straight to userspace. Enabled by
# `cargo xtask qemu --selftest` (and the future `xtask test-qemu` for CI).
selftest = []
# Integration-test build (`cargo xtask test-qemu`): everything `selftest` runs,
# plus the `isa-debug-exit` primitive + `SYS_DEBUG_EXIT` gated syscall, and boot
# failures/panics terminate QEMU with a fail verdict instead of dropping to eshell
# or halting. Never in a production kernel. See
# `docs/conventions/qemu-integration-tests.md`.
test-harness = ["selftest"]

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
debug = true
lto = false
codegen-units = 1
overflow-checks = false
