[workspace]
resolver = "3"
members = ["init","libkern","libheap","libos","librsproto","fs-server-ext4","hello","parent","child","eshell","service-mgr","heartbeat","profile-server","logging-service"]

# `hello` is a freestanding no_std bin with no unwinder; abort on panic.
# Harmless for the std `init`/`libkern` members (xtask never builds them for
# the bare target).
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
