[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "Nitrox build orchestrator — kernel builds, Limine fetch, disk image, QEMU."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Pure `core`, host-compilable: seed the user DB's PBKDF2 verifiers with the *same*
# KDF the on-target auth-service verifies with (no drift). See `assemble_image`.
libcrypto = { path = "../../userspace/libcrypto" }
