[package]
name = "init"
version = "0.1.0"
edition = "2024"

[features]
# Run init's boot-time demos: the `large.bin` page-cache read + the `parent` demo
# chain (else init boots straight to the interactive console). Enabled together with
# the kernel's `selftest` feature by `cargo xtask qemu --selftest`.
selftest = []
# Integration-test build (`cargo xtask test-qemu`): run the `selftest` chain, then
# report the verdict to the runner via `SYS_TEST_EXIT` (PASS when the demo chain
# reaps cleanly; FAIL on a crashed child, a failed spawn, or a critical-path boot
# failure) instead of dropping to the interactive console. See
# `docs/conventions/qemu-integration-tests.md`.
test-harness = ["selftest"]

[dependencies]
libkern = { path = "../libkern" }
libheap = { path = "../libheap" }
libos = { path = "../libos" }

# A library + binary split: the library holds init's host-testable internals (the
# bump-allocator math now; the `toml_lite` parser in Part 4), the binary is the
# bare-target PID-1 entry point. `cargo xtask test` runs the lib tests on the host
# (`--lib` skips the `#![no_main]` bin); `cargo xtask build` builds the bin bare.
[lib]
name = "init"
path = "src/lib.rs"

[[bin]]
name = "init"
path = "src/main.rs"
